pkg/ibmvpc/examples/out/explain_out/tgwEnabledSpecificFilter_all_vpcs_explain_detail.txt
Explaining connectivity from ky-vsi1-subnet20 to ky-vsi0-subnet2
Interpreted source: test-vpc2-ky/ky-vsi1-subnet20[10.240.128.5]
Interpreted destination: test-vpc0-ky/ky-vsi0-subnet2[10.240.4.4]
================================================================

Connections from test-vpc2-ky/ky-vsi1-subnet20[10.240.128.5] to test-vpc0-ky/ky-vsi0-subnet2[10.240.4.4]: All Connections

Path:
	ky-vsi1-subnet20[10.240.128.5] -> security group sg21-ky -> subnet20 -> network ACL acl21-ky -> 
	test-vpc2-ky -> TGW local-tg-ky -> test-vpc0-ky -> 
	network ACL acl2-ky -> subnet2 -> security group sg1-ky -> ky-vsi0-subnet2[10.240.4.4]


Details:
~~~~~~~~
Path is enabled; The relevant rules are:
	Egress:
		security group sg21-ky allows connection with the following allow rules
			index: 1, direction: outbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0
		network ACL acl21-ky allows connection with the following allow rules
			index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

	transit gateway local-tg-ky allows connection via transit connection tg_connection0 with the following prefix filter
		index: 0, action: permit, prefix: 10.240.4.0/22

	Ingress:
		network ACL acl2-ky allows connection with the following allow rules
			index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow
		security group sg1-ky allows connection with the following allow rules
			index: 0, direction: inbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0

TCP response is enabled; The relevant rules are:
	Egress:
		network ACL acl2-ky allows connection with the following allow rules
			index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

	transit gateway local-tg-ky allows connection via transit connection tg_connection2 with the following prefix filter
		default prefix,  action: permit

	Ingress:
		network ACL acl21-ky allows connection with the following allow rules
			index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

------------------------------------------------------------------------------------------------------------------------
